--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>AndroidLogoByN4G3</title>
+        <link href="style.css" type="text/css" rel="stylesheet">
     </head>
     <body>
         <div class="android">
