--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
                 <div class="l_eye"></div>
                 <div class="r_eye"></div>
             </div>
+            <div class="body">
+                <div class="l_arm"></div>
+                <div class="r_arm"></div>
+            </div>
         </div>
     </body>
 </html>
