--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             <div class="body">
                 <div class="l_arm"></div>
                 <div class="r_arm"></div>
+                <div class="l_leg"></div>
+                <div class="r_leg"></div>
             </div>
         </div>
     </body>
